feat: add sending of emails and messages logic after loan processing.